adding steps to sign and notarize

--- a/pycodesign.ini
+++ b/pycodesign.ini
@@ -8,6 +8,6 @@ package_name = fetcher
 bundle_id = com.oreilly.fetcher
 file_list = fetcher
 installation_path = /Applications/
-entitlements = None
+entitlements = '../entitlements.plist'
 version = 0.0.0
 
