--- a/pycodesign.ini
+++ b/pycodesign.ini
@@ -7,7 +7,7 @@ keychain-profile = ODEWAHN
 package_name = fetcher
 bundle_id = com.oreilly.fetcher
 file_list = fetcher
-installation_path = /Applications/
+installation_path = /usr/local/bin/
 entitlements = '../entitlements.plist'
-version = 0.0.0
+version = 0.2.0
 
